--- a/app.json
+++ b/app.json
@@ -1,7 +1,8 @@
 {
   "pages":[
     "pages/index/index",
-    "pages/show/show"
+    "pages/show/show",
+    "pages/profile/profile"
   ],
   "window":{
     "backgroundTextStyle":"light",
